err.log
cc1: warning: command line option ‘-std=c++11’ is valid for C++/ObjC++ but not for C
./src/config.c: In function ‘send_config_pipe’:
./src/config.c:10:9: warning: implicit declaration of function ‘send_pipe’ [-Wimplicit-function-declaration]
  return send_pipe(pipe_buf, UPDATE_CONFIG_PIPE, sizeof(struct config), PIPE_QT);
         ^
In file included from ./src/config.c:1:0:
./src/config.c: In function ‘init_config’:
./include/base.h:46:4: warning: implicit declaration of function ‘log_msg’ [-Wimplicit-function-declaration]
    log_msg("File: "__FILE__", Line: %05d:  " format"\r\n", __LINE__, ##__VA_ARGS__); \
    ^
./src/config.c:24:5: note: in expansion of macro ‘DEBUG’
     DEBUG("config_file %s", config_file);
     ^
./src/config.c:26:25: warning: implicit declaration of function ‘read_profile_int’ [-Wimplicit-function-declaration]
     conf.install_flag = read_profile_int(BASE_SECTION, BASE_INSTALL_KEY, 0, config_file); 
                         ^
./src/config.c:31:8: warning: implicit declaration of function ‘read_profile_string’ [-Wimplicit-function-declaration]
     if(read_profile_string(TERMINAL_SECTION, TM_NAME_KEY, buf, sizeof(buf), terminal->name, config_file))
        ^
In file included from ./src/config.c:1:0:
./include/base.h:45:21: warning: format ‘%d’ expects argument of type ‘int’, but argument 3 has type ‘long unsigned int’ [-Wformat=]
         do { printf("File: "__FILE__", Line: %05d: " format"\r\n", __LINE__, ##__VA_ARGS__); \
                     ^
./src/config.c:50:3: note: in expansion of macro ‘DEBUG’
   DEBUG("sizeof %d", sizeof(net->ip));
   ^
./src/config.c:78:3: warning: implicit declaration of function ‘strupr’ [-Wimplicit-function-declaration]
   strupr(net->mac);
   ^
./src/config.c:94:2: warning: implicit declaration of function ‘get_version’ [-Wimplicit-function-declaration]
  get_version(&conf.major_ver, &conf.minor_ver);
  ^
./src/config.c:104:10: warning: implicit declaration of function ‘exec_cmd’ [-Wimplicit-function-declaration]
          exec_cmd(cmd, result);
          ^
./src/config.c: In function ‘update_config’:
./src/config.c:126:3: warning: implicit declaration of function ‘find_all_netcards’ [-Wimplicit-function-declaration]
   find_all_netcards();
   ^
./src/config.c:143:12: warning: implicit declaration of function ‘save_config’ [-Wimplicit-function-declaration]
     return save_config();
            ^
./src/config.c: In function ‘save_config’:
./src/config.c:157:5: warning: implicit declaration of function ‘write_profile_string’ [-Wimplicit-function-declaration]
     write_profile_string(BASE_SECTION, BASE_INSTALL_KEY, buf, config_file);
     ^
In file included from ./src/config.c:1:0:
./src/config.c: In function ‘update_desktop’:
./include/base.h:73:16: warning: ‘return’ with a value, in function returning void
 #define ERROR  1
                ^
./src/config.c:208:10: note: in expansion of macro ‘ERROR’
   return ERROR;
          ^
./include/base.h:73:16: warning: ‘return’ with a value, in function returning void
 #define ERROR  1
                ^
./src/config.c:215:10: note: in expansion of macro ‘ERROR’
   return ERROR;
          ^
./include/base.h:73:16: warning: ‘return’ with a value, in function returning void
 #define ERROR  1
                ^
./src/config.c:222:10: note: in expansion of macro ‘ERROR’
   return ERROR;
          ^
./include/base.h:73:16: warning: ‘return’ with a value, in function returning void
 #define ERROR  1
                ^
./src/config.c:255:9: note: in expansion of macro ‘ERROR’
  return ERROR;
         ^
./src/config.c:298:33: error: ‘DESKTOP_GROUP_STATUS_KEY’ undeclared (first use in this function)
   write_profile_string(section, DESKTOP_GROUP_STATUS_KEY, buf, DESKTOP_FILE);
                                 ^
./src/config.c:298:33: note: each undeclared identifier is reported only once for each function it appears in
In file included from ./src/config.c:1:0:
./include/base.h:73:16: warning: ‘return’ with a value, in function returning void
 #define ERROR  1
                ^
./src/config.c:327:10: note: in expansion of macro ‘ERROR’
   return ERROR;
          ^
./include/base.h:73:16: warning: ‘return’ with a value, in function returning void
 #define ERROR  1
                ^
./src/config.c:345:11: note: in expansion of macro ‘ERROR’
    return ERROR;
           ^
./src/config.c:201:12: warning: unused variable ‘ret’ [-Wunused-variable]
  int i, j, ret;
            ^
./src/config.c: In function ‘save_config’:
./src/config.c:195:1: warning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
make: *** [config.o] Error 1
